--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "gcomp-scss": "generate-react component",
+    "gbase-scss": "generate-react component --type=base-scss",
+    "gmodule-scss": "generate-react component --type=module-scss"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
@@ -25,7 +28,7 @@
     "@typescript-eslint/eslint-plugin": "^7.5.0",
     "@typescript-eslint/parser": "^7.5.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "8.2.0",
+    "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-config-prettier": "^9.1.0",
@@ -35,11 +38,12 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "generate-react-cli": "^8.4.6",
     "prettier": "^3.2.5",
     "sass": "^1.72.0",
-    "stylelint": "^16.3.1",
-    "stylelint-config-clean-order": "^5.4.1",
-    "stylelint-config-recommended-scss": "^14.0.0",
+    "stylelint": "15.11.0",
+    "stylelint-config-clean-order": "5.2.0",
+    "stylelint-config-recommended-scss": "13.1.0",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
     "vite-plugin-checker": "^0.6.4",
